fix filter on mobile

--- a/sass/accessories-listing.scss
+++ b/sass/accessories-listing.scss
@@ -133,10 +133,11 @@ h3 {
     top: 0;
     z-index: 1030;
     background: $white;
-    padding: 1rem 0;
+    padding: 0;
     h3{
       text-align: center;
       line-height: 1.2;
+      padding: .5rem;
     }
     #closeFilterListing{
       display: block;
